# rust-ebpf-labs

./: .gitignore  README.md  flake.nix  rustfmt.toml  shell.nix
000-legacy/2021-tunvis/: .gitignore  README.md
001-xdp-ringbuf-vs-perf/: Cargo.toml  README.md  justfile
001-xdp-ringbuf-vs-perf/app/: Cargo.toml  build.rs
001-xdp-ringbuf-vs-perf/app/src/: cli.rs  main.rs  utils.rs
001-xdp-ringbuf-vs-perf/bpf/: Cargo.toml
001-xdp-ringbuf-vs-perf/bpf/src/: bees.rs  bpf_utils.rs
001-xdp-ringbuf-vs-perf/common/: Cargo.toml
001-xdp-ringbuf-vs-perf/common/src/: lib.rs
001_xdp_ringbuf_vs_perf/: Cargo.toml  README.md  justfile
001_xdp_ringbuf_vs_perf/.helix/: languages.toml
001_xdp_ringbuf_vs_perf/app/: Cargo.toml
001_xdp_ringbuf_vs_perf/bpf/: Cargo.toml
001_xdp_ringbuf_vs_perf/bpf/src/: bees.rs
001_xdp_ringbuf_vs_perf/docs/: bench_buf_165_flood.md  bench_no_buf_10pps.md  bench_no_buf_flood.md
001_xdp_ringbuf_vs_perf/poc/: Cargo.toml  build.rs
001_xdp_ringbuf_vs_perf/poc-common/: Cargo.toml
001_xdp_ringbuf_vs_perf/poc-common/src/: lib.rs
001_xdp_ringbuf_vs_perf/poc-ebpf/: Cargo.toml
001_xdp_ringbuf_vs_perf/poc-ebpf/src/: main.rs
001_xdp_ringbuf_vs_perf/poc-ebpf/src/bees/: bpf_utils.rs
001_xdp_ringbuf_vs_perf/poc/src/: main.rs  utils.rs
001_xdp_ringbuf_vs_perf/tests/: test_bench.py
002-xdp-ringbuf-dump/: Cargo.toml  README.md
002-xdp-ringbuf-dump/app/: Cargo.toml  build.rs
002-xdp-ringbuf-dump/app/src/: cli.rs  main.rs  utils.rs
002-xdp-ringbuf-dump/bpf/: Cargo.toml
002-xdp-ringbuf-dump/bpf/src/: bees.rs  main.rs
002-xdp-ringbuf-dump/common/: Cargo.toml
002-xdp-ringbuf-dump/common/src/: lib.rs
002_af_xdp_kernel_bypass/: Cargo.toml  Pipfile  README.md  justfile
002_af_xdp_kernel_bypass/app/: Cargo.toml  build.rs
002_af_xdp_kernel_bypass/app/src/: cli.rs  logger.rs  main.rs  utils.rs
002_af_xdp_kernel_bypass/bpf/: Cargo.toml
002_af_xdp_kernel_bypass/bpf/src/: bees.rs  bpf_utils.rs  main.rs
002_af_xdp_kernel_bypass/common/: Cargo.toml
002_af_xdp_kernel_bypass/common/src/: lib.rs
003-af-xdp-kernel-bypass/: Cargo.toml  README.md  client.pcap  justfile  server.pcap  shell.nix
003-af-xdp-kernel-bypass/_scripts/setup/: setup_client.sh  setup_server.sh
003-af-xdp-kernel-bypass/app/: Cargo.toml
003-af-xdp-kernel-bypass/app/src/: bpf_helper.rs  main.rs  utils.rs
003-af-xdp-kernel-bypass/bpf/: Cargo.toml
003-af-xdp-kernel-bypass/bpf/src/: bees.rs  bpf_auth.rs
003-af-xdp-kernel-bypass/common/: Cargo.toml
003-af-xdp-kernel-bypass/common/src/: lib.rs
003-af-xdp-kernel-bypass/docs/: client.pcap  server.pcap
003-af-xdp-kernel-bypass/lab/: Dockerfile  docker-compose.yml  start.sh  stop.sh
003-af-xdp-kernel-bypass/lab/data/: nlx0.conf  wg_client_01.conf  wg_client_02.conf  wg_client_03.conf  wg_client_04.conf  wg_client_05.conf  wg_client_06.conf  wg_client_07.conf  wg_client_08.conf  wg_client_09.conf  wg_client_10.conf
004-xdp-router/: Cargo.toml  README.md  Vagrantfile  build_debug.sh  build_release.sh  run_router_local.sh  run_router_vagrant.sh  run_routerctl_local_demo.sh  run_routerctl_vagrant_demo.sh  shell.nix
004-xdp-router/asset/: install_rustup.sh  prepare_rustup.sh  setup_client.sh  setup_server.sh
004-xdp-router/router-client/: Cargo.toml  client.rs
004-xdp-router/router-common/: Cargo.toml  common.rs
004-xdp-router/router-server/: Cargo.toml  args.rs  logger.rs  server.rs  xdp_ctl.rs
004-xdp-router/router-xdp/: Cargo.toml  xdp_process.rs  xdp_program.rs
004-xdp-router/xtask/: Cargo.toml  build_ebpf.rs  run.rs  xtask.rs
004-xdp-udp-routing/: Cargo.toml  README.md  Vagrantfile
004-xdp-udp-routing/app/: Cargo.toml
004-xdp-udp-routing/app/src/: api.rs  cli.rs  main.rs
004-xdp-udp-routing/bpf/: Cargo.toml
004-xdp-udp-routing/bpf/src/: bees.rs
004-xdp-udp-routing/common/: Cargo.toml
004-xdp-udp-routing/common/src/: lib.rs
006-wireguard-nat/: Cargo.toml  README.md
006-wireguard-nat/app/: Cargo.toml
006-wireguard-nat/app/src/: cli.rs  main.rs
006-wireguard-nat/bpf/src/: bees.rs  main.rs
006-wireguard-nat/common/: Cargo.toml
006-wireguard-nat/common/src/: lib.rs
kit/: Cargo.toml
kit/src/: kernel.rs  lib.rs  user.rs
kit/src/kernel/: bpf_utils.rs
kit/src/user/: logger.rs  system.rs
