[workspace]
resolver = "2"
members = [
    "app",
    "bpf",
    "common",
]
default-members = ["app", "common"]

[workspace.package]
description = "AF_XDP Linux kernel network bypass (PoC)"
version = "0.1.0"
edition = "2024"
authors = ["Gediminas Lūžys <163294+gediminas@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
aya               = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-build         = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-ebpf          = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-ebpf-bindings = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log           = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log-ebpf      = { git = "https://github.com/aya-rs/aya", default-features = false }

anyhow = { version = "1", default-features = false }
axum = { version = "0.8", default-features = false }
cargo_metadata = { version = "0.23.1", default-features = false }
clap = { version = "4.5.57", default-features = false, features = ["std"] } # std -> https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
libc = { version = "0.2.180", default-features = false }
log = { version = "0.4.29", default-features = false }
network-types = { version = "0.0.7", default-features = false }
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.149", default-features = false }
tokio = { version = "1.49.0", default-features = false }
which = { version = "8.0.0", default-features = false }

poc-common = { path = "./common", default-features = false }
kit = { path = "../kit", default-features = false }

[profile.release.package.poc-bpf]
debug = 2
codegen-units = 1
