[package]
name = "poc-bpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
poc-common = { path = "../common" }

aya-ebpf = { workspace = true }
aya-ebpf-bindings = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "poc"
path = "src/main.rs"
