[package]
name = "poc-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
poc-common = { path = "../poc-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = { workspace = true, default-features = false }

aya-ebpf-bindings = "0.1.1"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "poc"
path = "src/main.rs"
