[package]
name = "poc-bpf"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

network-types = "0.0.7"

poc-common = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "poc"
path = "src/main.rs"