[package]
name = "router-xdp"
description = "eBFP-XDP-Router core program"
version = "0.1.0"
authors = ["Gediminas Lūžys <163294+gediminas@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[[bin]]
name = "router-xdp"
path = "xdp_program.rs"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[workspace]
members = []

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya"}
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }

network-types = "0.0.4"

router-common = { path = "../router-common"  }

