[package]
name = "poc-common"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
user = ["aya", "serde"]

[dependencies]
aya = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }

[lib]
path = "src/lib.rs"