[package]
name = "poc"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true


[dependencies]
anyhow = { workspace = true }
aya = { workspace = true }
aya-log = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal", "fs", "sync"] }
clap = { workspace = true, features = ["derive"] }

poc-common = { workspace = true, features = ["user"] }
kit = { workspace = true, features = ["user"] }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }

# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependecy so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
poc-bpf = { path = "../bpf" }

[[bin]]
name = "poc"
path = "src/main.rs"